--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>HW2</title>
 </head>
 
   <body>
 
     <!-- page content -->
-	<a href="resume.html">resume</a>
+	<a href="resume.html">Resume</a>
+	
+
   </body>
 
 </html>
