--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <title>HW2</title>
 </head>
 
+
   <body>
 
     <!-- page content -->
-	<a href="resume.html">Resume</a>
-	
+	<br/>
+	<img src="Selfie.jpg" width="200px"/>
+	<p>
+	Ross Huenemann
+	</p>
+	<br/>
+	<a href="resume.html">MyResume</a>
 
   </body>
 
