style sheets added

--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <title>HW2</title>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<title>HW2</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
 
 
-  <body>
+	<body>
+ 
+		<br/>
+		<img src="Selfie.jpg" width="200px"/>
+		<h1>Ross Huenemann<h1/>
+		<br/>
+		<a href="resume.html">MyResume</a>
 
-    <!-- page content -->
-	<br/>
-	<img src="Selfie.jpg" width="200px"/>
-	<p>
-	Ross Huenemann
-	</p>
-	<br/>
-	<a href="resume.html">MyResume</a>
-
-  </body>
+	</body>
 
 </html>
