almost there for HW2

--- a/resume.html
+++ b/resume.html
@@ -9,45 +9,59 @@
 </head>
 
   <body>
-		<br/>Ross Huenemann 
-		<br/>2013 Kountry LN apt 307b, IA 52405 
-		<br/>319-855-2736; rosster89@centurylink.net 
-		<br/>  
-		<br/>Education 
-		<br/>	The University of Iowa, Iowa City, IA 	 	 
-		<br/>Double Major: Business Finance/BAIS 
-		<br/>Member of HawkTrade Group 	Aug 2015 -2017
-		<br/>A.A. 
-		<br/>Kirkwood Community College 
-		<br/>	GPA: 3.5:  	Dean’s List: Fall 2014-Spring 2015 	May 2015 
-		<br/>High School Diploma 
-		<br/>Thomas Jefferson High School
-		<br/>Management/Customer Service Experience 	May 2008 
-		<br/>Customer Service Manager 	Jan ’08 - Jun ‘09 
-		<br/>Wal-Mart, Cedar Rapids, IA 
-		<br/>•	Conducted 5-10 associate interviews for hiring 
-		<br/>•	Supervised returns at Customer Service Desk 
-		<br/>•	Maintained and regulated cash flows and cash transfers in the Money Center 
-		<br/>•	Supervised up to 25 cashiers depending on shift. 
-		<br/>•	Handled around $40,000 daily to supply registers for transactions. 
-		<br/>	Cashier 	Nov ’07 - Jan ‘09 
-		<br/>Wal-Mart, Cedar Rapids, IA 
-		<br/>•	Generated a positive customer experience by staying energetic and positive. 
-		<br/>•	Excelled at accurate and timely customer transactions, scanning 1200 items and hour 
-		<br/>	Teller 	Apr ’09 - May ’10 
-		<br/>US Bank, Cedar Rapids, IA 
-		<br/>•	Assisted customers in banking transactions 
-		<br/>•	Selected to oversee customer service for branch 
-		<br/>	Entrepreneur, Start-Up: Right Purdy Music 	May ’10 - Dec ‘14 
-		<br/>Right Purdy Pictures; Music Dept. 
-		<br/>•	Created and operated Music Department 
-		<br/>•	Completed originally composed music for TV advertisements  
-		<br/>•	Contracted to produce original music for clients such as Eastern Iowa Airport and Fuel. 
-		<br/>Skills 
-		<br/>Technical Skills 
-		<br/>•	Ten key by touch 
-		<br/>•	Microsoft Office Suite
-		<br/>	
+		<h1>
+			<br>Ross Huenemann 
+			<br>2013 Kountry LN apt 307b, IA 52405 
+			<br>319-855-2736; rosster89@centurylink.net 
+		<h1/>
+		
+		<p 2>
+			<h2>Education:</h2>
+			<br>The University of Iowa, Iowa City, IA 	 	 
+			<br>Double Major: Business Finance/BAIS 
+			<br>Member of HawkTrade Group 	Aug 2015 -2017
+			<br>
+			<br>A.A. 
+			<br>Kirkwood Community College 
+			<br>GPA: 3.5:  	Dean’s List: Fall 2014-Spring 2015 	May 2015 
+			<br>
+			<br>High School Diploma 
+			<br>Thomas Jefferson High School
+			
+		<p 2/>
+			<h3>Work Expirence:</h3>
+			<br>Management/Customer Service Experience 	May 2008 
+			<br>Customer Service Manager 	Jan ’08 - Jun ‘09 
+			<br>Wal-Mart, Cedar Rapids, IA 
+			<br>•	Conducted 5-10 associate interviews for hiring 
+			<br>•	Supervised returns at Customer Service Desk 
+			<br>•	Maintained and regulated cash flows and cash transfers in the Money Center 
+			<br>•	Supervised up to 25 cashiers depending on shift. 
+			<br>•	Handled around $40,000 daily to supply registers for transactions. 
+			<br>
+			<br>Cashier 	Nov ’07 - Jan ‘09 
+			<br>Wal-Mart, Cedar Rapids, IA 
+			<br>•	Generated a positive customer experience by staying energetic and positive. 
+			<br>•	Excelled at accurate and timely customer transactions, scanning 1200 items and hour 
+			<br>	
+			<br>Teller 	Apr ’09 - May ’10 
+			<br>US Bank, Cedar Rapids, IA 
+			<br>•	Assisted customers in banking transactions 
+			<br>•	Selected to oversee customer service for branch 
+			<br>	 
+			<br>Entrepreneur, Start-Up: Right Purdy Music 	May ’10 - Dec ‘14
+			<br>Right Purdy Pictures; Music Dept. 
+			<br>•	Created and operated Music Department 
+			<br>•	Completed originally composed music for TV advertisements  
+			<br>•	Contracted to produce original music for clients such as Eastern Iowa Airport and Fuel. 
+			
+		<p 3>
+			<h4>Skills:</h4>
+			<br>Technical Skills 
+			<br>•	Ten key by touch 
+			<br>•	Microsoft Office Suite
+		<p 3/>
+		<br>	
 		<br/><a href="index.html">back to index</a>
   </body>
 
